@@ -42,10 +42,29 @@ FlightRecorder API allows you to subscribe to specific JFR data via event stream
         }
 ```
 
+```java
+        var client = HttpClient.newBuilder().connectTimeout(Duration.ofSeconds(5)).build();
+        var request = HttpRequest.newBuilder(URI.create(URL)).GET().build();
+
+        try (var rs = new RecordingStream()){
+
+            rs.onEvent("jdk.VirtualThreadPinned", event -> {
+                System.out.println("Cause: " + event.getString("cause"));
+                System.out.println("Total pause: " + event.getDuration("sumOfPauses"));
+                System.out.println("Longest pause: " + event.getDuration("longestPause"));
+                System.out.println();
+            });
+
+            rs.startAsync();
+
+            var virtualThread = Thread.startVirtualThread(() -> getBodyAsString(client, request));
+            virtualThread.join();
+        }
+```
 ## To start recording
 
 ```bash
-# recordActiveEvent.sh
+# sh recordActiveEvent.sh
 
 java -XX:StartFlightRecording:filename=activeEvent.jfr GarbageCollectionInfoEvent.java
 
@@ -74,7 +93,7 @@ Longest pause: PT0.020502123S
 ```
 
 ```bash
-# recordPassiveEvent.sh
+# sh recordPassiveEvent.sh
 
 java -XX:StartFlightRecording:filename=passiveEvent.jfr CPULoadInfoEvent.java
 
@@ -105,6 +124,20 @@ CPU Load 2022-04-19T19:23:03.989737965Z
 Machine total: 5.4455442%
 JVM User: 0.33999017%
 JVM System: 0.13936256%
+```
+
+```bash
+# sh recordVirtualThreadPinnedEvent.sh
+
+java -XX:StartFlightRecording:filename=virtualThreadPinnedEvent.jfr \
+  --enable-preview --source 19 VirtualThreadPinnedEvent.java
+  
+[0.199s][info][jfr,startup] Started recording 1. No limit specified, using maxsize=250MB as default.
+[0.199s][info][jfr,startup] 
+[0.199s][info][jfr,startup] Use jcmd 22312 JFR.dump name=1 to copy recording data to file.
+Note: VirtualThreadPinnedEvent.java uses preview features of Java SE 19.
+Note: Recompile with -Xlint:preview for details.
+Body: <!doctype html> ...
 ```
 
 ## To view and parse the recordings
@@ -185,6 +218,26 @@ startTime = 22:23:03.989 (2022-04-19)
 jvmUser = 0.34%
 jvmSystem = 0.14%
 machineTotal = 5.45%
+}
+```
+```bash
+# sh viewVirtualThreadPinnedEventRecordFile.sh
+
+# make sure the virtualThreadPinnedEvent.jfr file is created before running this script
+jfr print --events jdk.VirtualThreadPinned virtualThreadPinnedEvent.jfr
+
+jdk.VirtualThreadPinned {
+  startTime = 19:12:47.876 (2022-12-05)
+  duration = 802 ms
+  eventThread = "" (javaThreadId = 35, virtual)
+  stackTrace = [
+    java.lang.VirtualThread.parkOnCarrierThread(boolean, long) line: 578
+    java.lang.VirtualThread.park() line: 501
+    java.lang.System$2.parkVirtualThread() line: 2596
+    jdk.internal.misc.VirtualThreads.park() line: 54
+    java.util.concurrent.locks.LockSupport.park(Object) line: 219
+    ...
+  ]
 }
 ```
 
